--- a/WaterIntakeCalcWeb/app/views/main.html
+++ b/WaterIntakeCalcWeb/app/views/main.html
@@ -1,23 +1,39 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="sign-in-wrapper" >  
+	<ul class="nav nav-tabs nav-justified " id="myTab">
+		<li class="active signInTab"><a data-target="#signInTab" data-toggle="tab">Sign In</a></li>
+		<li class="signUpTab"><a data-target="#signUpTab" data-toggle="tab">Sign Up</a></li>
+	</ul>
+	<div class="sign-in-form" >
+		<div class="tab-content">
+			<div class="tab-pane active" id="signInTab">
+				<form name="signInForm" ng-submit="signIn(inCredentials)" novalidate>
+					<div class="loader" ng-if="loading"></div>
+					<div class="form-group">
+						<input class="form-control" type="text" id="username" ng-model="inCredentials.username" placeholder="Login">
+					</div>
+						<div class="form-group">
+						<input class="form-control" type="password" id="password" ng-model="inCredentials.password" placeholder="Password">
+					</div>
+					<div class="checkbox">
+						<label>
+						<input type="checkbox">Remember me
+						</label>
+					</div>
+					<button class="btn" type="submit">Sign In</button>
+				</form>
+			</div>
+			<div class="tab-pane" id="signUpTab">
+				<form name="signUpForm" ng-submit="signUp(upCredentials)" novalidate>
+					<div class="loader" ng-if="loading"></div>
+					<div class="form-group">
+						<input class="form-control" type="text" id="username" ng-model="upCredentials.username" placeholder="Login">
+					</div>
+						<div class="form-group">
+						<input class="form-control" type="password" id="password" ng-model="upCredentials.password" placeholder="Password">
+					</div>
+					<button class="btn" type="submit">Sign Up</button>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
