--- a/WaterIntakeCalc/Views/Home/Index.cshtml
+++ b/WaterIntakeCalc/Views/Home/Index.cshtml
@@ -1,24 +1,41 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+﻿@{
+    Layout = null;
+}
+
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+
+    <link rel="stylesheet" href="~/Scripts/styles/bootstrap.css" />
+    <link rel="stylesheet" href="~/Scripts/styles/main.css">
+</head>
+<body ng-app="waterIntakeCalcWebApp">
+
+    <div class="container">
+        <div ng-view=""></div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+    <script src="~/Scripts/scripts/ext/jquery.js"></script>
+    <script src="~/Scripts/scripts/ext/angular.js"></script>
+    <script src="~/Scripts/scripts/ext/bootstrap.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-animate.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-aria.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-cookies.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-messages.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-resource.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-route.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-sanitize.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-touch.js"></script>
+    <script src="~/Scripts/scripts/ext/angular-local-storage.js"></script>
+
+    <script src="~/Scripts/scripts/app.js"></script>
+    <script src="~/Scripts/scripts/controllers/main.js"></script>
+    <script src="~/Scripts/scripts/controllers/about.js"></script>
+    <script src="~/Scripts/scripts/controllers/waterinake.js"></script>
+    <script src="~/Scripts/scripts/services/authservice.js"></script>
+</body>
+</html>
