--- a/WaterIntakeCalc/Scripts/views/waterintake.html
+++ b/WaterIntakeCalc/Scripts/views/waterintake.html
@@ -10,7 +10,7 @@
 			</button>
 		</div>
 		<div class="chart-cont">
-			<img src="/Scripts/images/chart.png" ng-src="chartPath" alt="chart">
+			<img ng-src="{{chartPath}}" alt="chart">
 		</div>
 		<div class="chart-btn">
 			<button type="button" class="btn btn-default btn-lg" ng-click="getNextWeek()">
