--- a/WaterIntakeCalc/Views/Home/Index.cshtml
+++ b/WaterIntakeCalc/Views/Home/Index.cshtml
@@ -31,6 +31,7 @@
     <script src="~/Scripts/scripts/ext/angular-sanitize.js"></script>
     <script src="~/Scripts/scripts/ext/angular-touch.js"></script>
     <script src="~/Scripts/scripts/ext/angular-local-storage.js"></script>
+    <script src="~/Scripts/scripts/ext/index.js"></script>
 
     <script src="~/Scripts/scripts/app.js"></script>
     <script src="~/Scripts/scripts/controllers/main.js"></script>
